--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,10 +57,24 @@ $bordegris: rgb(85, 84, 84);
     max-height: auto;
 }
 
+/* MAP */
+
+$colors: (
+ anteriores: #55acee,
+ nuevos:  #3a5795,
+ obsoletos: #C25E30
+);
+
+@each $name-color, $bgcolor in $colors {
+    .bg--#{$name-color} {
+        background-color: $bgcolor;
+    }
+ }
+ 
+
 
 .servicios__diferentes {
     border: 2px solid $bordegris;
-    background-color: rgba(211, 251, 216, 0.637);
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -77,6 +91,16 @@ $bordegris: rgb(85, 84, 84);
     background-color: rgb(211, 251, 216);
 }
 }
+
+
+
+
+
+
+
+
+
+
 
 /* Media Queries Servicios */
 @import "_queries";
